--- a/index.htm
+++ b/index.htm
@@ -13,22 +13,58 @@
     <body>
         <header>
             <div class="topo">
-                        
+            <!-- <div>
+                <a><img id="whats" src="img/botao-whatsapp.png" alt="botão whatsapp"></a>
+            </div> -->
+            <div class="social">
+                <div class="flecha">
+                    <p>◄</p>
+                </div>
+                <div>
+                    <p> 
+                        R
+                        <br>e
+                        <br>d
+                        <br>e
+                        <br>s
+                        <br><br>S
+                        <br>o
+                        <br>c
+                        <br>i
+                        <br>a
+                        <br>i
+                        <br>s
+                    </p>
+                </div>
+                <div class="coluna">
+                    <div class="fechaRedes">X</div>
+                    <div>
+                        <img class="iconRede" src="img/facebook.png" alt="">
+                    </div>
+                    <div>
+                        <img class="iconRede" src="img/instagram.png" alt="">
+                    </div>
+                    <div>
+                        <img class="iconRede" src="img/youtube.png" alt="">
+                    </div> 
+                </div>   
+            </div>            
             </div>
             <div class="container">
-                <div class="row">
+                <div class="row linear">
                     <div class="col-md-4 logo">
                         <img src="img/logo-roda.png" alt="logo rodaforros">
                     </div>
                     <nav class="col-md-8">
                         <li class="lista">
-                            <ul class="menu"><a href="index.htm">Home</a></ul>
-                            <ul class="menu"><a href="index.htm">Produtos</a></ul>
-                            <ul class="menu"><a href="contato.htm">Entre em Contato</a></ul>
+                            <ul class="border"><a href="index.htm" class="menu">Home</a></ul>
+                            <ul class="border"><a href="index.htm" class="menu">Produtos</a></ul>
+                            <ul class="border"><a href="contato.htm" class="menu">Entre em Contato</a></ul>
                         </li>
                     </nav>
                 </div>
             </div>
         </header>
+        <script src="js/geral.js"></script>
     </body>
 </html>
